Revert "Fix menu overflow on mobile view"

--- a/themes/hugo-geekdoc/static/custom.css
+++ b/themes/hugo-geekdoc/static/custom.css
@@ -1,9 +1,1 @@
 /* You can add custom styles here. */
-@media screen and (max-width: 39rem){
-  .gdoc-nav__entry {
-    overflow-x: hidden;
-  }
-  #menu-control:checked ~ main .gdoc-nav__entry {
-    overflow-x: visible;
-  }
-}
